# anchorvspinocho

./: .gitignore  README.md
anchor-vault/: Anchor.toml
anchor-vault/programs/vault/: Cargo.toml
anchor-vault/programs/vault/src/: constants.rs  errors.rs  lib.rs
anchor-vault/programs/vault/src/instructions/: deposit.rs  withdraw.rs
anchor-vault/programs/vault/tests/: test_vault.rs
pinocchio_vault/: Cargo.toml  README.md
pinocchio_vault/benches/: compute_units.rs
pinocchio_vault/src/: entrypoint.rs
pinocchio_vault/src/instruction/: deposit.rs  withdraw.rs
pinocchio_vault/src/state/: mod.rs  vault_state.rs
pinocchio_vault/tests/: unit_tests.rs
