[package]
name = "vault"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
name = "vault"
crate-type = ["cdylib", "lib"]

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"

[dev-dependencies]
mollusk-svm = "=0.0.15"
solana-sdk = "=2.1.0"
five8_const = "0.1.3"
